<resources>
    <string name="app_name">Agritopo</string>
    <string name="navigation_drawer_open">Abrir menu</string>
    <string name="navigation_drawer_close">Fechar menu</string>
    <string name="action_settings">Configuração</string>
    <string name="title_activity_mapa">Mapa</string>
    <string name="action_novo_ponto">Ponto</string>
    <string name="action_nova_area">Área</string>
    <string name="action_poi">Pontos de Interesse</string>
    <string name="action_curvas_nivel">Curvas de Nível</string>
    <string name="action_terrenos">Terrenos</string>
    <string name="action_geometrias">Geometrias</string>
    <string name="edt_pesquisa">Pesquisar mapas&#8230;</string>
    <string name="action_layer_poi">Pontos de Interesse</string>
    <string name="action_layer_curvas_nivel">Curvas de Nível</string>
    <string name="action_layer_geometry">Geometrias</string>
    <string name="title_activity_settings">Configurações</string>
    <string-array name="list_preference_entries">
        <item>Entrada 1</item>
        <item>Entrada 2</item>
        <item>Entrada 3</item>
    </string-array>
    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string-array name="multi_select_list_preference_default_value" />
    <string name="action_carregarmapas">Carregar Mapas</string>
    <string name="title_activity_configuracao">Configurações</string>
    <string name="action_layer">KML</string>
    <string name="action_layers">KML</string>
    <string name="action_gps">GPS</string>
    <string name="menu_cadastros">Cadastros</string>
    <string name="menu_mapas">Mapas</string>
    <string name="menu_configuracao">Configurações</string>
    <string name="cbx_pontos_de_interesse">Pontos</string>
    <string name="cbx_geometrias">Áreas</string>
    <string name="action_rotacao">Rotação</string>
    <string name="action_concluido">Concluído</string>
    <string name="action_cancelar">Cancelar</string>
    <string name="title_info">Informações</string>
    <string name="text_titulo">Título</string>
    <string name="text_descricao">Descrição</string>
    <string name="title_elemento_list">Elementos</string>
    <string name="title_elemento_detail">Detalhe do Elemento</string>
    <string name="title_cadastros_listar">Cadastros</string>
    <string name="cbx_distancias">Distâncias</string>
    <string name="ic_access_alarms" translatable="false">&#xe000;</string>
    <string name="ic_access_time" translatable="false">&#xe001;</string>
    <string name="ic_accessibility" translatable="false">&#xe002;</string>
    <string name="ic_account_box" translatable="false">&#xe003;</string>
    <string name="ic_account_circle" translatable="false">&#xe004;</string>
    <string name="ic_adb" translatable="false">&#xe005;</string>
    <string name="ic_add" translatable="false">&#xe006;</string>
    <string name="ic_add_alarm" translatable="false">&#xe007;</string>
    <string name="ic_add_box" translatable="false">&#xe008;</string>
    <string name="ic_add_circle" translatable="false">&#xe009;</string>
    <string name="ic_add_circle_outline" translatable="false">&#xe00a;</string>
    <string name="ic_airplane_mode_off" translatable="false">&#xe00b;</string>
    <string name="ic_airplane_mode_on" translatable="false">&#xe00c;</string>
    <string name="ic_android" translatable="false">&#xe00d;</string>
    <string name="ic_apps" translatable="false">&#xe00e;</string>
    <string name="ic_archive" translatable="false">&#xe00f;</string>
    <string name="ic_arrow_back" translatable="false">&#xe010;</string>
    <string name="ic_arrow_drop_down" translatable="false">&#xe011;</string>
    <string name="ic_arrow_drop_down_circle" translatable="false">&#xe012;</string>
    <string name="ic_arrow_drop_up" translatable="false">&#xe013;</string>
    <string name="ic_arrow_forward" translatable="false">&#xe014;</string>
    <string name="ic_attachment" translatable="false">&#xe015;</string>
    <string name="ic_auto_fix" translatable="false">&#xe016;</string>
    <string name="ic_backspace" translatable="false">&#xe017;</string>
    <string name="ic_backup" translatable="false">&#xe018;</string>
    <string name="ic_beenhere" translatable="false">&#xe019;</string>
    <string name="ic_block" translatable="false">&#xe01a;</string>
    <string name="ic_bluetooth" translatable="false">&#xe01b;</string>
    <string name="ic_bluetooth_audio" translatable="false">&#xe01c;</string>
    <string name="ic_bluetooth_connected" translatable="false">&#xe01d;</string>
    <string name="ic_bluetooth_disabled" translatable="false">&#xe01e;</string>
    <string name="ic_bluetooth_searching" translatable="false">&#xe01f;</string>
    <string name="ic_bold" translatable="false">&#xe020;</string>
    <string name="ic_book" translatable="false">&#xe021;</string>
    <string name="ic_bookmark" translatable="false">&#xe022;</string>
    <string name="ic_bookmark_outline" translatable="false">&#xe023;</string>
    <string name="ic_brightness_auto" translatable="false">&#xe024;</string>
    <string name="ic_brightness_high" translatable="false">&#xe025;</string>
    <string name="ic_brightness_low" translatable="false">&#xe026;</string>
    <string name="ic_brightness_medium" translatable="false">&#xe027;</string>
    <string name="ic_bug_report" translatable="false">&#xe028;</string>
    <string name="ic_cake" translatable="false">&#xe029;</string>
    <string name="ic_call" translatable="false">&#xe02a;</string>
    <string name="ic_call_end" translatable="false">&#xe02b;</string>
    <string name="ic_call_made" translatable="false">&#xe02c;</string>
    <string name="ic_call_merge" translatable="false">&#xe02d;</string>
    <string name="ic_call_missed" translatable="false">&#xe02e;</string>
    <string name="ic_call_received" translatable="false">&#xe02f;</string>
    <string name="ic_call_split" translatable="false">&#xe030;</string>
    <string name="ic_camera" translatable="false">&#xe031;</string>
    <string name="ic_camera_alt" translatable="false">&#xe032;</string>
    <string name="ic_camera_roll" translatable="false">&#xe033;</string>
    <string name="ic_cancel" translatable="false">&#xe034;</string>
    <string name="ic_cast" translatable="false">&#xe035;</string>
    <string name="ic_cast_connected" translatable="false">&#xe036;</string>
    <string name="ic_chat" translatable="false">&#xe037;</string>
    <string name="ic_check" translatable="false">&#xe038;</string>
    <string name="ic_check_box" translatable="false">&#xe039;</string>
    <string name="ic_check_box_blank" translatable="false">&#xe03a;</string>
    <string name="ic_check_box_outline" translatable="false">&#xe03b;</string>
    <string name="ic_check_box_outline_blank" translatable="false">&#xe03c;</string>
    <string name="ic_check_circle" translatable="false">&#xe03d;</string>
    <string name="ic_check_circle_blank" translatable="false">&#xe03e;</string>
    <string name="ic_check_circle_outline" translatable="false">&#xe03f;</string>
    <string name="ic_check_circle_outline_blank" translatable="false">&#xe040;</string>
    <string name="ic_chevron_left" translatable="false">&#xe041;</string>
    <string name="ic_chevron_right" translatable="false">&#xe042;</string>
    <string name="ic_chromecast" translatable="false">&#xe043;</string>
    <string name="ic_circles" translatable="false">&#xe044;</string>
    <string name="ic_circles_add" translatable="false">&#xe045;</string>
    <string name="ic_circles_extended" translatable="false">&#xe046;</string>
    <string name="ic_clear" translatable="false">&#xe047;</string>
    <string name="ic_close" translatable="false">&#xe048;</string>
    <string name="ic_close_caption" translatable="false">&#xe049;</string>
    <string name="ic_cloud" translatable="false">&#xe04a;</string>
    <string name="ic_cloud_circle" translatable="false">&#xe04b;</string>
    <string name="ic_cloud_done" translatable="false">&#xe04c;</string>
    <string name="ic_cloud_download" translatable="false">&#xe04d;</string>
    <string name="ic_cloud_off" translatable="false">&#xe04e;</string>
    <string name="ic_cloud_queue" translatable="false">&#xe04f;</string>
    <string name="ic_cloud_upload" translatable="false">&#xe050;</string>
    <string name="ic_comment" translatable="false">&#xe051;</string>
    <string name="ic_communities" translatable="false">&#xe052;</string>
    <string name="ic_content_copy" translatable="false">&#xe053;</string>
    <string name="ic_content_cut" translatable="false">&#xe054;</string>
    <string name="ic_content_paste" translatable="false">&#xe055;</string>
    <string name="ic_create" translatable="false">&#xe056;</string>
    <string name="ic_credit_card" translatable="false">&#xe057;</string>
    <string name="ic_crop" translatable="false">&#xe058;</string>
    <string name="ic_crop_free" translatable="false">&#xe059;</string>
    <string name="ic_crop_landscape" translatable="false">&#xe05a;</string>
    <string name="ic_crop_portrait" translatable="false">&#xe05b;</string>
    <string name="ic_crop_square" translatable="false">&#xe05c;</string>
    <string name="ic_data_usage" translatable="false">&#xe05d;</string>
    <string name="ic_delete" translatable="false">&#xe05e;</string>
    <string name="ic_developer_mode" translatable="false">&#xe05f;</string>
    <string name="ic_dialpad" translatable="false">&#xe060;</string>
    <string name="ic_directions" translatable="false">&#xe061;</string>
    <string name="ic_directions_bike" translatable="false">&#xe062;</string>
    <string name="ic_directions_bus" translatable="false">&#xe063;</string>
    <string name="ic_directions_car" translatable="false">&#xe064;</string>
    <string name="ic_directions_subway" translatable="false">&#xe065;</string>
    <string name="ic_directions_train" translatable="false">&#xe066;</string>
    <string name="ic_directions_transit" translatable="false">&#xe067;</string>
    <string name="ic_directionswalk" translatable="false">&#xe068;</string>
    <string name="ic_disc_full" translatable="false">&#xe069;</string>
    <string name="ic_do_not_disturb" translatable="false">&#xe06a;</string>
    <string name="ic_dock" translatable="false">&#xe06b;</string>
    <string name="ic_domain" translatable="false">&#xe06c;</string>
    <string name="ic_done" translatable="false">&#xe06d;</string>
    <string name="ic_done_all" translatable="false">&#xe06e;</string>
    <string name="ic_drafts" translatable="false">&#xe06f;</string>
    <string name="ic_drive" translatable="false">&#xe070;</string>
    <string name="ic_drive_apk" translatable="false">&#xe071;</string>
    <string name="ic_drive_audio" translatable="false">&#xe072;</string>
    <string name="ic_drive_code" translatable="false">&#xe073;</string>
    <string name="ic_drive_document" translatable="false">&#xe074;</string>
    <string name="ic_drive_drawing" translatable="false">&#xe075;</string>
    <string name="ic_keyboard_arrow_right" translatable="false">&#xe0c7;</string>
    <string name="ic_star" translatable="false">&#xe161;</string>
    <string name="ic_star_outline" translatable="false">&#xe163;</string>
    <string name="arquivo_nome">Arquivo</string>
    <string name="arquivo_informacao">Sempre na pasta \"agritopo\" de seu dispositivo</string>
    <string name="arquivo_tipo_kml">Formato KML</string>
    <string name="arquivo_tipo_geojson">Formato GeoJSON</string>
    <string name="content_serial_key_trial_descricao">Você tem 0 dias gratuitos restantes</string>
    <string name="content_serial_key_trial_continuar">Continuar</string>
    <string name="content_serial_key_trial_ativar">Ativar</string>
    <string name="nome">Nome</string>
    <string name="email">E-mail</string>
    <string name="ramo_atividade">Ramo de Atividade</string>
    <string name="empresa">Empresa</string>
    <string name="munic_pio">Município</string>
</resources>