<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="br.com.neogis.agritopo.activity.SerialKeyTrialActivity"
    tools:showIn="@layout/activity_serial_key_trial">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:padding="5sp"
        android:gravity="center"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="368sp"
            android:layout_height="495sp"
            android:padding="5sp"
            android:gravity="center"
            android:orientation="vertical"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="8sp"
            tools:layout_editor_absoluteY="8sp">

            <TextView
                android:id="@+id/serial_key_free_text_tempo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="20sp"
                android:text="@string/content_serial_key_trial_descricao"
                android:textSize="25sp" />

            <Button
                android:id="@+id/serial_key_free_button_continuar"
                android:layout_width="match_parent"
                android:layout_height="70sp"
                android:layout_marginLeft="50sp"
                android:layout_marginRight="50sp"
                android:padding="20sp"
                android:text="@string/content_serial_key_trial_continuar"
                android:textColor="#000000"
                android:textSize="18sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1sp"
                android:layout_marginBottom="20sp"
                android:layout_marginLeft="80sp"
                android:layout_marginRight="80sp"
                android:layout_marginTop="20sp"
                android:background="@android:color/black" />

            <Button
                android:id="@+id/serial_key_free_button_ativar"
                android:layout_width="match_parent"
                android:layout_height="70sp"
                android:layout_marginLeft="50sp"
                android:layout_marginRight="50sp"
                android:text="@string/content_serial_key_trial_ativar"
                android:textColor="#000000"
                android:textSize="18sp" />

        </LinearLayout>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>
