<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/popup_layer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="1">

    <ImageButton
        android:id="@+id/btnElementoDistancia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/cbxPontos"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/cbxAreas"
        android:background="@color/colorPrimary"
        android:paddingLeft="10sp"
        android:paddingRight="10sp"
        android:src="@drawable/ic_info_white_24dp" />

    <ImageButton
        android:id="@+id/btnElementoPonto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btnPopupLayerFecharBottom"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/btnElementoDistancia"
        android:background="@color/colorPrimary"
        android:paddingLeft="10sp"
        android:paddingRight="10sp"
        android:src="@drawable/ic_info_white_24dp" />

    <ImageButton
        android:id="@+id/btnPopupLayerFecharBottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/cbxPontos"
        android:alpha="0.5"
        android:background="@android:color/white" />

    <ImageButton
        android:id="@+id/btnPopupLayerFechar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/cbxAreas"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/btnPopupLayerFecharTop"
        android:layout_toEndOf="@+id/layer_popup_descricao_tv"
        android:layout_toRightOf="@+id/layer_popup_descricao_tv"
        android:background="@color/colorPrimaryDark"
        android:paddingLeft="10sp"
        android:paddingRight="10sp"
        android:src="@drawable/ic_close_white_24dp" />

    <TextView
        android:id="@+id/layer_popup_descricao_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/btnPopupLayerFecharTop"
        android:layout_toLeftOf="@+id/btnElementoArea"
        android:layout_toStartOf="@+id/btnElementoArea"
        android:background="@color/colorPrimaryDark"
        android:gravity="start"
        android:paddingBottom="10sp"
        android:paddingLeft="10sp"
        android:paddingTop="10sp"
        android:text="@string/title_elemento_list"
        android:textAlignment="viewStart"
        android:textColor="@android:color/background_light"
        android:textSize="24sp"
        android:textStyle="bold" />

    <CheckBox
        android:id="@+id/cbxAreas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/layer_popup_descricao_tv"
        android:layout_toLeftOf="@+id/btnElementoArea"
        android:layout_toStartOf="@+id/btnElementoArea"
        android:background="@color/colorPrimary"
        android:checked="true"
        android:paddingBottom="10sp"
        android:paddingLeft="24sp"
        android:paddingTop="10sp"
        android:text="@string/cbx_geometrias"
        android:textColor="@android:color/background_light"
        android:textSize="24sp" />

    <CheckBox
        android:id="@+id/cbxDistancias"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/cbxAreas"
        android:layout_toLeftOf="@+id/btnElementoDistancia"
        android:layout_toStartOf="@+id/btnElementoDistancia"
        android:background="@color/colorPrimary"
        android:checked="true"
        android:paddingBottom="10sp"
        android:paddingLeft="24sp"
        android:paddingTop="10sp"
        android:text="@string/cbx_distancias"
        android:textColor="@android:color/background_light"
        android:textSize="24sp" />

    <CheckBox
        android:id="@+id/cbxPontos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/cbxDistancias"
        android:layout_toLeftOf="@+id/btnElementoDistancia"
        android:layout_toStartOf="@+id/btnElementoDistancia"
        android:background="@color/colorPrimary"
        android:checked="true"
        android:paddingBottom="10sp"
        android:paddingLeft="24sp"
        android:paddingTop="10sp"
        android:text="@string/cbx_pontos_de_interesse"
        android:textColor="@android:color/background_light"
        android:textSize="24sp" />

    <ImageButton
        android:id="@+id/btnPopupLayerFecharTop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:alpha="0.5"
        android:background="@android:color/white"
        android:paddingTop="100sp" />

    <ImageButton
        android:id="@+id/btnElementoArea"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/cbxDistancias"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/btnPopupLayerFechar"
        android:background="@color/colorPrimary"
        android:paddingLeft="10sp"
        android:paddingRight="10sp"
        android:src="@drawable/ic_info_white_24dp" />

</RelativeLayout>